--- a/Web-Proje/wwwroot/css/site.css
+++ b/Web-Proje/wwwroot/css/site.css
@@ -74,8 +74,8 @@ body {
     color: white;
 }
 
-.main-arka{
-    background-color: #d8ffab;
+.main-arka {
+    background-color: #8B0000;
 }
 
 .link-tg { /* Tümünü görüntüle linki */
